# svelte-ssr-wasm-repro

./: package-lock.json  package.json  svelte.config.js  tsconfig.json
src/: app.html
src/lib/wasm/: index.d.ts  index.js  index_bg.wasm
src/lib/wasm-node/: index.cjs  index_bg.wasm  index_bg.wasm.d.ts
src/routes/: __layout.svelte
wasm/: Cargo.toml  build-wasm.nu
wasm/src/: lib.rs
