[package]
name = "wasm"
version = "0.1.0"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
